--- a/Web technologies/Homework 1/index.html
+++ b/Web technologies/Homework 1/index.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about me</title>
-</head>
-<body>
-    <p> Name: Kirill Trifonov
-    </p> 
-    <p> Date birth: 08.25.93
-    </p>
-    <h1>Heading h1</h1>
-    <h2>Heading h2</h2>
-    <h3>Heading h3</h3>
-    <h4>Heading h4</h4>
-    <h5>Heading h5</h5>
-    <h6>Heading h6</h6>
-    <H1> 'About me:'</H1>
-    <h3> Kirill <b>Trifonov</b> sdfssdfsd</h3>
-    <p>asdaaaaaaaaaaaaaaaaaaaaaa sadfwerwerwer 
-        <b> sdfsdfsdfdsfdsfsdf</b>sdffffffs<i> sdasdfsdfdsfdsf</i>dfsdfwere sdfsdfdsfwew wfwefwefewf</p>
-        <h3>My the best qualities:</h3>
-        <ul>
-            <li>ответсвенность</li>
-            <li>упертость</li>
-        
-        </ul>
-        <a href="https://www.google.com">www.google.com</a> <br>
-        <script src="script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header class="header">
+      <h2>
+        Меня зовут
+        <a href="https://t.me/Ijemitsu">Кирилл Трифонов Евгеньевич</a>
+      </h2>
+      <h3>
+        Я начинающий QA Engineer, обущающийся в школе
+        <a href="https://redrover.school/">RedRoverSchool</a>
+      </h3>
+    </header>
+    <main>
+      <img src="./img/V5EIk3546_A.jpg" width="200px" alt="">
+      <p>
+        Я начинающий <strong>QA Engineer</strong>. с небольшим опытом работы на
+        данной позиции. Родился в Казахстане в небольшом городке. Последние 4
+        года проживал в Москве. Работал на двух криптороектах в компании в
+        Томской компании <a href="https://www.google.com">Meta Lamp</a>
+      </p>
+    </main>
+
+    <footer>
+      <div>
+        <a href="https://t.me/Ijemitsu">
+          <img src="./icons/telegram.png" width="32px" alt="">
+        </a>
+        <a href="https://www.instagram.com/">
+          <img src="./icons/instagram.png" alt="">
+        </a>
+        <a href="https://vk.com/ru">
+          <img src="./icons/vk.png" alt="">
+        </a>
+      </div>
+    </footer>
+    <script src="./script.js"></script>
+  </body>
 </html>
